Feat: Footer 부분

--- a/src/css/main.html
+++ b/src/css/main.html
@@ -617,7 +617,7 @@
             </div>
 
             <div class="footer-content-btn">
-                <div class="btn-left">
+                <div class="btn-area btn-left">
                     <div class="footer-content-btn-item">
                         <div class="footer-content-btn-item-img"></div>
                         <div class="footer-content-btn-item-text">
@@ -632,8 +632,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="btn-right">
+                <div class="btn-area btn-right">
+                    <div class="footer-content-btn-item">
+                        <div class="footer-content-btn-item-img"></div>
+                        <div class="footer-content-btn-item-text">
+                            <span>충남도립 대학교</span>
+                        </div>
+                    </div>
 
+                    <div class="footer-content-btn-item">
+                        <div class="footer-content-btn-item-img"></div>
+                        <div class="footer-content-btn-item-text">
+                            <span>한국정보 교육원</span>
+                        </div>
+                    </div>
+
+                    <div class="footer-content-btn-item">
+                        <div class="footer-content-btn-item-img"></div>
+                        <div class="footer-content-btn-item-text">
+                            <span>만든 이</span>
+                        </div>
+                    </div>
                 </div>
                 
             </div>
