Feat: notice 시작 실행

--- a/src/css/main.html
+++ b/src/css/main.html
@@ -387,7 +387,8 @@
 
         mainActionList();
 
-        //noticeEvent(); // 공지사항 보이기
+        
+        noticeEvent(); // 공지사항 보이기
 
         function mainActionListEvent(e) {
             const type = e.target.getAttribute('data-type');
