Feat: next - prev 추가

--- a/src/css/main.html
+++ b/src/css/main.html
@@ -210,6 +210,22 @@
                         <div class="main-page-content-box-title">게임</div>
                         <div class="main-page-content-box-content">
 
+                            <!-- prev button -->
+                            <div class="main-list-button">
+                                <button><</button>
+                            </div>
+
+
+                            <div class="list">
+
+                            </div>
+
+                            <!-- next button -->
+                            <div class="main-list-button">
+                                <button>></button>
+                            </div>
+
+
 
                         </div>
                     </div>
@@ -585,7 +601,6 @@
             {title: '그래도돼', img:'./img/music/그래도돼.jpg'},
             {title: '답을 줘', img: './img/music/답을줘.jpg'},
             {title: '레블하트', img: './img/music/레블하트.jpg'},
-            {title: '아이돌', img: './img/music/아이돌.jpg'}
         ]
 
         musicList();
