--- a/src/css/main.html
+++ b/src/css/main.html
@@ -242,8 +242,46 @@
                                 <button>></button>
                             </div>
 
+                        </div>
+                    </div>
 
 
+                    <!-- 게임 영역, style로 배경 지정하기 -->
+                    <div class="main-page-content-box book">
+                        <div class="main-page-content-box-book-title">도서</div>
+                        <div class="main-page-content-box-content">
+
+                            <!-- prev button -->
+                            <div class="main-list-button">
+                                <button><</button>
+                            </div>
+
+
+                            <div class="list">
+                                <div class="mainPage-content-box book">
+                                    <div class="imgBx">
+                                        <img src="./img/book/기록이라는세계.jpg">
+                                    </div>
+                                </div>
+
+                                <section id="pageSection">
+                                    <div class="page" id="page1">
+                                        <img src="./img/book/기록이라는세계.jpg">
+                                    </div>
+                                
+                                    <div class="page" id="page2">
+                                      <h2>두 번째 페이지...</h2>
+                                      <span>This is second page...</span>
+                                    </div>
+                                </section>
+
+                            </div>
+
+                            <!-- next button -->
+                            <div class="main-list-button">
+                                <button>></button>
+                            </div>
+                            
                         </div>
                     </div>
 
