--- a/src/css/main.html
+++ b/src/css/main.html
@@ -20,21 +20,28 @@
                 <source src="./img/mainTopVideo.mp4" type="video/mp4" />
             </video>
 
-            <section class="test-border-green">
-                <div class="main-top-banner-text">TEST456</div>
-            </section>
-
             <section class="first-action test-border-blue">
 
-                <div class="main-top-banner-text section-second">
+                <div class="main-top-banner-text section-first">
                     <span class="first-text">사용자의 취향을 읽고, 광고 없이 다채로운 미디어를 추천합니다.</span></br>
-                    <span class="second-text">"오직 당신을 위한, 맞춤형 추천 플랫폼" </span> <span class="second-title">MyPick</span>
+                    <span class="second-text">"오직 당신을 위한, 맞춤형 추천 플랫폼" </span> </br>
+                    <span class="second-title">MyPick</span>
                 </div>
-                <div class="main-top-banner-text" data-text="두 번째 섹션의 자동 타이핑 텍스트입니다."></div>
             </section>
 
-            <section class="first-action test-border-green">
-                <div class="main-top-banner-text" data-text="두 번째 섹션의 자동 타이핑 텍스트입니다.">TEST123</div>
+            <section class="test-border-green">
+                <div class="main-top-banner-text section-second">
+                    <span class="first-text">언제든 접속 가능한 24시간 서버로, 영화·음악·도서 등</span></br>
+                    <span class="second-text">다양한 미디어를 즉시 만나보세요. 간편한 인터페이스가</span></br>
+                    <span class="third-text">유저 편의성과 풍부한 추천 경험을 동시에 선사합니다.</span>
+                </div>
+            </section>
+
+            <section class="test-border-red">
+                <div class="main-top-banner-text">
+                    <span class="first-text">하나의 가입으로 시작되는 끝없는 즐거움,</span></br>
+                    <span class="second-text">MyPick과 함께 매일을 더 새롭고 다채롭게 만들어보세요.</span></br>
+                </div>
             </section>
 
 
@@ -67,7 +74,7 @@
 
             // 스크롤 감지를 위한 새로운 Observer 생성
             const scrollObserver = new IntersectionObserver(onScroll, {
-                threshold: 0.5,
+                threshold: 0.7,
                 rootMargin: '0px'
             });
 
