Feat: 세 번째 광고

--- a/src/css/main.html
+++ b/src/css/main.html
@@ -38,9 +38,9 @@
             </section>
 
             <section class="test-border-red">
-                <div class="main-top-banner-text">
+                <div class="main-top-banner-text section-third">
                     <span class="first-text">하나의 가입으로 시작되는 끝없는 즐거움,</span></br>
-                    <span class="second-text">MyPick과 함께 매일을 더 새롭고 다채롭게 만들어보세요.</span></br>
+                    <span class="second-title">MyPick</span><span class="second-text">과 함께 매일을 더 새롭고 다채롭게 만들어보세요.</span></br>
                 </div>
             </section>
 
