--- a/src/css/main.html
+++ b/src/css/main.html
@@ -15,12 +15,12 @@
 	<div class="main-container">
 
         <!-- 상단 영역 -->
-        <div class="main-top-video test-border-red">
+        <div class="main-top-video">
             <video class="bg-video__content" autoplay muted loop>
                 <source src="./img/mainTopVideo.mp4" type="video/mp4" />
             </video>
 
-            <section class="first-action test-border-blue">
+            <section class="first-action test-border-transparent">
 
                 <div class="main-top-banner-text section-first">
                     <span class="first-text">사용자의 취향을 읽고, 광고 없이 다채로운 미디어를 추천합니다.</span></br>
@@ -29,7 +29,7 @@
                 </div>
             </section>
 
-            <section class="test-border-green">
+            <section class="test-border-transparent">
                 <div class="main-top-banner-text section-second">
                     <span class="first-text">언제든 접속 가능한 24시간 서버로, 영화·음악·도서 등</span></br>
                     <span class="second-text">다양한 미디어를 즉시 만나보세요. 간편한 인터페이스가</span></br>
@@ -37,7 +37,7 @@
                 </div>
             </section>
 
-            <section class="test-border-red">
+            <section class="test-border-transparent">
                 <div class="main-top-banner-text section-third">
                     <span class="first-text">하나의 가입으로 시작되는 끝없는 즐거움,</span></br>
                     <span class="second-title">MyPick</span><span class="second-text">과 함께 매일을 더 새롭고 다채롭게 만들어보세요.</span></br>
